--- a/app/components/carousel/carousel.css
+++ b/app/components/carousel/carousel.css
@@ -1,11 +1,13 @@
 .orbiting-image {
-  offset-path: circle(40px at center);
   offset-distance: calc(var(--start) * 100%);
-  animation: orbit 8s ease-in-out infinite;
+  animation: orbit 5s linear infinite;
   transform: rotate(calc(-90deg - 360deg * var(--start)));
-  opacity: 0.5;
+  offset-path: circle(20px at center);
 }
 
 @keyframes orbit {
-  to { offset-distance: calc(var(--start) * 100% + 100%);  transform: rotate(calc(-360deg - 90deg - var(--start) * 360deg))}
+    to {
+        offset-distance: calc(var(--start) * 100% + 100%);  
+        transform: rotate(calc(-360deg - 90deg - var(--start) * 360deg))
+    }
 }
