--- a/app/[locale]/rail/page.css
+++ b/app/[locale]/rail/page.css
@@ -1,22 +1,15 @@
-@import "@radix-ui/themes/styles.css";
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.rails-heading {
+    background: -webkit-linear-gradient(75deg, var(--blue-9) 20%, var(--cyan-10) 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding-bottom: var(--space-2);
+    animation: 3s linear 1s infinite normal none running shines;
 }
 
-:root {
-    --custom-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.06);
-}
 
-.radix-themes {
-  --default-font-family: var(--font-golos);
-}
-
-.smartmachines-copy-button {
+.cta {
     border-radius: var(--radius-4);
-    animation: 2s linear 2s infinite normal none running pulse;
+    animation: 2s linear 2s infinite normal none running draw;
     p {
         background: -webkit-linear-gradient(240deg, var(--plum-9) 10%, var(--blue-10) 90%);
         background-clip: text;
@@ -28,7 +21,8 @@
     }
 }
 
-@keyframes pulse {
+
+@keyframes draw {
     from {
         transform: scale(1);
     }
@@ -48,12 +42,12 @@
 
 @keyframes shines {
     from {
-        filter: saturate(0.6)
+        filter: saturate(0.9)
     }
     50% {
         filter: saturate(2)
     }
     to {
-        filter: saturate(0.6)
+        filter: saturate(0.9)
     }
 }
