--- a/app/[locale]/rail/page.css
+++ b/app/[locale]/rail/page.css
@@ -1,53 +1,32 @@
-.rails-heading {
-    background: -webkit-linear-gradient(75deg, var(--blue-9) 20%, var(--cyan-10) 90%);
+.humble {
+    color: var(--mauve-4);
+}
+
+.farfetch {
+    background: -webkit-linear-gradient(240deg, var(--violet-9) 10%, var(--pink-10) 90%);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    padding-bottom: var(--space-2);
-    animation: 3s linear 1s infinite normal none running shines;
 }
 
-
-.cta {
+.major-effect {
+    top: 0;
+    left: 0;
+    background-color: var(--surface-1);
     border-radius: var(--radius-4);
-    animation: 2s linear 2s infinite normal none running draw;
-    p {
-        background: -webkit-linear-gradient(240deg, var(--plum-9) 10%, var(--blue-10) 90%);
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: 
-        3s linear 1s infinite normal none running shines;
-        font-weight: 600;
-    }
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    transform: translate(500px, 250px);
+    backdrop-filter: blur(1px);
 }
 
-
-@keyframes draw {
-    from {
-        transform: scale(1);
-    }
-    2% {
-        transform: scale(1.02);
-    }
-    6% {
-        transform: scale(1);
-    }
-    8% {
-        transform: scale(1.04);
-    }
-    12% {
-        transform: scale(1);
-    }
-}
-
-@keyframes shines {
-    from {
-        filter: saturate(0.9)
-    }
-    50% {
-        filter: saturate(2)
-    }
-    to {
-        filter: saturate(0.9)
-    }
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
