--- a/app/[locale]/auto/page.css
+++ b/app/[locale]/auto/page.css
@@ -3,7 +3,7 @@
 }
 
 .farfetch {
-    background: -webkit-linear-gradient(240deg, var(--teal-10) -10%, var(--blue-10) 110%);
+    background: -webkit-linear-gradient(240deg, var(--cyan-10) -10%, var(--blue-10) 110%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -14,6 +14,12 @@
     border-radius: var(--radius-4);
     background-color: var(--color-panel);
     box-shadow: 0 0px 12px 0px var(--black-a1)
+}
+
+.dashed-group {
+    padding: var(--space-4);
+    border-radius: var(--radius-4);
+    border: 0.5px solid var(--mauve-5);
 }
 
 .parameter-box {
@@ -29,7 +35,6 @@
 .description-box {
     border-radius: var(--radius-2);
     background-color: var(--mauve-1);
-    padding: var(--space-1);
     border: 1px solid var(--mauve-4);
     font-size: var(--font-size-1);
     color: var(--mauve-12);
@@ -61,4 +66,28 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
+}
+
+.services-group-root {
+    display: flex;
+	border-radius: var(--radius-2);
+	box-shadow: 0 2px 14px var(--black-a1);
+    margin: auto;
+    width: fit-content;
+}
+
+.services-group-item {
+    all: unset;
+	background-color: transparent;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	user-select: none;
+    padding: var(--space-3) var(--space-5);
+	&:hover {
+		background-color: var(--accent-1);
+	}
+	&[data-state="on"] {
+		background-color: var(--accent-2);
+	}
 }
