--- a/app/components/mobile-menu/mobile-menu.module.css
+++ b/app/components/mobile-menu/mobile-menu.module.css
@@ -8,10 +8,16 @@
     box-shadow: var(--custom-shadow);
     border-radius: var(--radius-4) var(--radius-4) 0 0;
     transition: transform 0.4s ease; 
+    .indicator {
+        transition: transform 0.4s ease; 
+    }
 }
 
 .menu-seen {
     transform: translateY(0vh);
+    .indicator {
+        transform: rotate(180deg);
+    }
 }
 
 .link {
