--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -11,6 +11,18 @@ html {
     scroll-behavior: smooth;
 }
 
+a {
+    all: unset;
+	outline: none;
+	text-decoration: none;
+	user-select: none;
+    display: block;
+    cursor: pointer;
+    :hover {
+        color: var(--cyan-11);
+    }
+}
+
 :root {
     --custom-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.06);
 }
