--- a/app/components/desktop-menu/desktop-menu.module.css
+++ b/app/components/desktop-menu/desktop-menu.module.css
@@ -10,6 +10,12 @@
     backdrop-filter: blur(2px);
 }
 
+/* @media (max-width: 1024px) {
+	.Root {
+		display: none;
+	}
+} */
+
 .MenuList {
 	display: flex;
 	justify-content: center;
