--- a/app/components/desktop-menu/desktop-menu.module.css
+++ b/app/components/desktop-menu/desktop-menu.module.css
@@ -10,11 +10,11 @@
     backdrop-filter: blur(2px);
 }
 
-/* @media (max-width: 1024px) {
+@media (max-width: 1024px) {
 	.Root {
 		display: none;
 	}
-} */
+}
 
 .MenuList {
 	display: flex;
