hide menu + language clear

--- a/app/components/mobile-menu/mobile-menu.module.css
+++ b/app/components/mobile-menu/mobile-menu.module.css
@@ -16,6 +16,17 @@
     border-radius: var(--radius-3);
 }
 
+.language {
+    position: absolute;
+    width: min-content;
+    left: 20px;
+    bottom: 20px;
+    background-color: var(--color-panel-solid);
+    box-shadow: var(--custom-shadow);
+    padding: var(--space-1);
+    border-radius: var(--radius-3);
+}
+
 .container {
     position: absolute;
     bottom: 0;
@@ -75,6 +86,8 @@
 	}
 }
 
+
+
 @keyframes slideDown {
 	from {
 		height: 0;
@@ -96,7 +109,4 @@
 .pic {
     transition: 0.3s transform ease;
     transform: translateX(0);
-}
-.pic--active {
-    transform: translateX(8px);
 }
